<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:background="#292723">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/just_buy"
            android:textSize="48sp"
            android:fontFamily="@font/nunito_light"
            android:textColor="@color/secondary_MC_1"
            android:shadowColor="@color/grey_MC_1100"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2" />
        <TextView
            android:layout_marginTop="-20dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/it_man"
            android:fontFamily="@font/nunito_light"
            android:textSize="48sp"
            android:textColor="@color/secondary_MC_1"
            android:shadowColor="@color/grey_MC_1100"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2" />
        <TextView
            android:layout_marginTop="9dp"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:text="@string/Loren_ipsum"
            android:fontFamily="@font/opensans_regular"
            android:textSize="18sp"
            android:textColor="@color/accent_MC_1"
            android:shadowColor="@color/grey_MC_1100"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:breakStrategy="balanced"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/Loren_ipsunP2"
            android:fontFamily="@font/opensans_regular"
            android:textSize="18sp"
            android:textColor="@color/accent_MC_1"
            android:shadowColor="@color/grey_MC_1100"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:breakStrategy="balanced"/>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/learnMoreBtn"
                android:padding="11dp"
                android:textSize="20sp"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_MC_1"
                android:background="@drawable/learnmore_homescreen"
                android:text="@string/learn_more"
                android:gravity="center"
                android:layout_marginEnd="25dp"/>

            <TextView
                android:id="@+id/buyNowBtn"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/Buy_Now"
                android:textSize="20sp"
                android:textColor="@color/accent_MC_1"
                android:padding="11dp"
                android:background="@drawable/buynow_homescreen"
                android:gravity="center"/>
        </LinearLayout>





    </LinearLayout>


</FrameLayout>