<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#292723"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:fontFamily="@font/nunito_light"
        android:textColor="@color/secondary_MC_1"
        android:textSize="72sp"
        android:elegantTextHeight="true"
        android:shadowColor="@color/grey_MC_100"
        android:layout_marginBottom="20dp"/>

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="41dp"
        android:visibility="gone" />



    <LinearLayout
        android:id="@+id/acct_login_form"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            android:elevation="20dp"
            android:outlineSpotShadowColor="@color/grey_MC_100"
            tools:targetApi="p">
            <EditText
                android:id="@+id/username_account_signup"
                android:hint="@string/name_hint"
                android:layout_marginStart="15dp"
                android:maxLines="1"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            android:elevation="20dp"
            android:outlineSpotShadowColor="@color/grey_MC_100"
            tools:targetApi="p">

            <AutoCompleteTextView
                android:id="@+id/email_account_signup"
                android:hint="@string/email"
                android:layout_marginStart="15dp"
                android:maxLines="1"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            android:elevation="20dp"
            android:outlineSpotShadowColor="@color/grey_MC_100"
            tools:targetApi="p">
            <EditText
                android:id="@+id/password_account_signup"
                android:hint="@string/password"
                android:layout_marginStart="15dp"
                android:maxLines="1"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardCornerRadius="20dp"
            android:elevation="20dp"
            android:outlineSpotShadowColor="@color/grey_MC_100"
            tools:targetApi="p">
            <EditText
                android:id="@+id/confPassword_account_signup"
                android:hint="@string/confirm_password"
                android:layout_marginStart="15dp"
                android:maxLines="1"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp"
            android:backgroundTint="@color/primary_MC_3">

            <Button
                android:gravity="center"
                android:id="@+id/create_acct_button_signup"
                android:textColor="@color/accent_MC_1"
                android:background="@android:color/transparent"
                android:text="@string/create_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/already_have_account_signup"
            android:textColor="@color/grey_MC_100"
            android:text="@string/have_account_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/yellow_outline"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"/>




    </LinearLayout>

</LinearLayout>