<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary_MC_1"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_login"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:textStyle="normal"
        android:text="@string/hello_again"
        android:textColor="@color/secondary_MC_1"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".15" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/nunito_light"
        android:lineSpacingMultiplier=".7"
        android:text="@string/welcome_back_we_miss_you_so_much"
        android:textAlignment="center"
        android:textColor="@color/secondary_MC_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias=".15">

        <androidx.cardview.widget.CardView
            android:layout_width="230dp"
            android:layout_height="46dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/crimsonpro_light"
                android:hint="@string/email"
                android:maxLines="1"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="230dp"
            android:layout_height="46dp"
            android:layout_marginTop="15dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/crimsonpro_light"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/change_input_password_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:paddingEnd="10dp"
                app:srcCompat="@drawable/ic_akar_icons_eye_slashed_login"
                tools:ignore="RtlSymmetry" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forgetPassword_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:alpha=".7"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/forget_password"
            android:textColor="@color/grey_MC_100" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_login"
            android:layout_width="230dp"
            android:layout_height="51dp"
            android:backgroundTint="@color/primary_MC_3"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_light"
                android:text="Sign In"
                android:textColor="@color/accent_MC_1"
                android:textSize="24sp" />


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias=".3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_line_2_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimsonpro_light"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="Or continue with"
                android:textColor="@color/grey_MC_100"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_line_2_login" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/googleSignIn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/outline_google_logo_login"
            android:elevation="5dp"
            android:paddingStart="45dp"
            android:paddingTop="7dp"
            android:paddingEnd="45dp"
            android:paddingBottom="7dp"
            app:srcCompat="@drawable/ic_google_logo_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimsonpro_light"
                android:text="@string/not_a_member"
                android:textColor="@color/grey_MC_100"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/registerNow_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/crimsonpro_light"
                android:text="Register Now"
                android:textColor="@color/accent_MC_1"
                android:textSize="16sp" />


        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>